<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">虾聊</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="null_string">""</string>
    <string name="version">v1.0</string>
    <!-- home activity -->
    <string name="mark_des">"话题热聊"</string>
    <string name="avatar">"头像"</string>
    <string name="slogan">"签名"</string>
    <string name="gender">"性别"</string>
    <string name="about">"关于我们"</string>
    <string name="officialsite">"官网"</string>
    <string name="sitelink">"xialiao.me"</string>
    <string name="weibo">"微博"</string>
    <string name="weibolink">"虾聊APP"</string>
     <string name="wechat">"微信公众号"</string>
     <string name="wechatid">"xialiao-app"</string>
     <string name="qqgroup">"QQ群"</string>
    <string name="qqnum">"390137195"</string>
     
    <string name="feedback">"反馈建议"</string>
    <string name="male">"男"</string>
    <string name="female">"女"</string>
    <string name="sign_hint">"请输入您的个性签名"</string>
    <string name="imagecontent">"image"</string>
    <string name="sign">"个性签名"</string>
    <string name="save">"保存"</string>
    <string name="send">"发送"</string>
    <string name="copyright">"©2014 xialiao all rights reserved"</string>

</resources>