
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/start_bg"
    android:orientation="vertical"
    android:visibility="visible" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/imagecontent"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:layout_width="118dp"
        android:layout_height="53dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/imagecontent"
        android:padding="12dp"
        android:src="@drawable/xialiao_text" />
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/imagecontent"
        android:scaleType="fitEnd"
        android:src="@drawable/jianzhu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sitelink"
        android:textColor="@color/grey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="8dp"
        android:textColor="@color/grey"
        android:text="@string/copyright"
        android:textSize="12sp" />

</RelativeLayout>