<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/sign_backbt"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imagecontent"
            android:padding="10dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/sign_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		<EditText
            android:id="@+id/sign_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:inputType="textMultiLine" />
        <TextView
            android:id="@+id/sign_charcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sign_edit"
            android:layout_alignParentRight="true"
            android:layout_margin="12dp"
            android:textColor="@color/grey"
            android:text="30"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>