<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topic_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#F8F8F8"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divid_0"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/topic_rl"
        android:background="#C0C0C0" />

    <LinearLayout
        android:id="@+id/setting_head_rl"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/setting_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

<!--         <com.wlm.widget.CircleImageView -->
<!--             xmlns:app="http://schemas.android.com/apk/res-auto" -->
<!--             android:id="@+id/setting_iv_head" -->
<!--             android:layout_width="100dp" -->
<!--             android:layout_height="100dp" -->
<!--             android:layout_marginBottom="10dp" -->
<!--             android:layout_marginTop="50dp" -->
<!--             app:border_color="@color/white" -->
<!--             android:layout_gravity="center" -->
<!--             android:gravity="center" -->
<!--             app:border_width="2dp" /> -->
        
        <ImageView
            android:id="@+id/setting_iv_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:hint="@string/sign_hint"
            android:gravity="center" />
        
        <ImageView
            android:id="@+id/sex_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/sign_hint"
            android:padding="10dp"
            android:src="@drawable/male_selected" />

        <TextView
            android:id="@+id/sign_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/sign_hint"
            android:maxEms="16"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/setting_feedback_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/feedback"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/feedback_iv"
            android:layout_width="18sp"
            android:layout_height="32sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imagecontent"
            android:paddingRight="10dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/setting_about_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/about"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/about_iv"
            android:layout_width="18sp"
            android:layout_height="32sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imagecontent"
            android:paddingRight="10dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="?android:attr/listDivider" />

</LinearLayout>